refactor(#62): 인덴트 수정